--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -2,7 +2,7 @@
 block config
   //- Setup site's base URL to match the "baseUrl" key within `package.json`
   //- Otherwise default to relative pathing
-  - var baseUrl = config.baseUrl || './'
+  - var baseUrl = config.baseUrl || './';
 
 doctype html
 <html class='no-js' lang='en'>
@@ -33,6 +33,8 @@ body
         include ../_modules/footer/footer.jade
 
     block scripts
+        script(src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js")
         script(src= baseUrl + 'scripts/main.js')
         
         script(src="//cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js")
