--- a/src/_styles/mixins/_typography.scss
+++ b/src/_styles/mixins/_typography.scss
@@ -1,3 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,600');
 
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
+@font-face {
+	font-family: 'Gotham';
+	src: url('../font/subset-GothamBold.eot');
+	src: url('../font/subset-GothamBold.eot?#iefix') format('embedded-opentype'),
+		url('../font/subset-GothamBold.woff2') format('woff2'),
+		url('../font/subset-GothamBold.woff') format('woff'),
+		url('../font/subset-GothamBold.ttf') format('truetype'),
+		url('../font/subset-GothamBold.svg#GothamBold') format('svg');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Gotham';
+	src: url('../font/subset-Gotham-Light.eot');
+	src: url('../font/subset-Gotham-Light.eot?#iefix') format('embedded-opentype'),
+		url('../font/subset-Gotham-Light.woff2') format('woff2'),
+		url('../font/subset-Gotham-Light.woff') format('woff'),
+		url('../font/subset-Gotham-Light.ttf') format('truetype'),
+		url('../font/subset-Gotham-Light.svg#Gotham-Light') format('svg');
+	font-weight: 300;
+	font-style: normal;
+}
