--- a/src/_styles/mixins/_variables.scss
+++ b/src/_styles/mixins/_variables.scss
@@ -6,10 +6,10 @@ $darkGray: #787871;
 $midGray: #999;
 $lightGray: #ebebeb;
 $lightestGray: #f4f7f8;
-$blue: #053f7a;
-$blueGray: #bbc9c9;
+$green: #476a2d;
+$greenGray: #bbc9c9;
 
-$mainColor: $blue;
+$mainColor: $green;
 $link: $mainColor;
 $linkHover: $mainColor + #333;
 $text: $white;
@@ -35,4 +35,5 @@ $duration: 0.3s;
 $easing: cubic-bezier(.785, .135, .15, .86);
 $easingLight: ease;
 
-$mainFont: 'Open Sans', sans-serif;
+$mainFont: 'Gotham', sans-serif;
+$logoFont: 'Century Gothic', futura, 'URW Gothic L', Verdana, sans-serif;
