--- a/src/index.jade
+++ b/src/index.jade
@@ -2,3 +2,31 @@ extends _layouts/base
 
 block content
     main.home
+        .home__main-logo
+        h1.home__title
+        .home__line
+        .home__wrapper
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
+            a.home__logo
+                img(src="/images/")
