--- a/src/index.jade
+++ b/src/index.jade
@@ -2,31 +2,48 @@ extends _layouts/base
 
 block content
     main.home
-        .home__main-logo
-        h1.home__title
-        .home__line
-        .home__wrapper
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
-            a.home__logo
-                img(src="/images/")
+        .container
+            .row
+                .col-24
+                    .home__container
+                        .home__main-logo
+                            img(src="/images/emblem.png")
+                            .home__group
+                                span L
+                                span a
+                                span v
+                                span e
+                                span r
+                                span a
+                                span m
+                                span e
+                                span n
+                                span t
+                                span e
+                        h1.home__title Pensamos, luego hacemos
+                        .home__line
+                        .home__wrapper
+                            a.home__logo
+                                img(src="/images/logos/chakana.png")
+                            a.home__logo
+                                img(src="/images/logos/achaval.png")
+                            a.home__logo
+                                img(src="/images/logos/VIK.png")
+                            a.home__logo
+                                img(src="/images/logos/weinert.png")
+                            a.home__logo
+                                img(src="/images/logos/descorchados.png")
+                            a.home__logo
+                                img(src="/images/logos/JA.png")
+                            a.home__logo
+                                img(src="/images/logos/vinoapp.png")
+                            a.home__logo
+                                img(src="/images/logos/MDV.png")
+                            a.home__logo
+                                img(src="/images/logos/marale-wines.png")
+                            a.home__logo
+                                img(src="/images/logos/lazy-ballerina.png")
+                            a.home__logo
+                                img(src="/images/logos/furlotti.png")
+                            a.home__logo
+                                img(src="/images/logos/RAI.png")
