--- a/src/_styles/pages/_home.scss
+++ b/src/_styles/pages/_home.scss
@@ -1,3 +1,13 @@
 .home {
-    
+    &__container {
+        width: 100%;
+        position: relative;
+    }
+
+    &__main-logo {
+        width: 
+        img  {
+
+        }
+    }
 }
