--- a/src/index.jade
+++ b/src/index.jade
@@ -9,41 +9,41 @@ block content
                         .home__main-logo
                             img(src="/images/emblem.png")
                             .home__group
-                                span L
-                                span a
-                                span v
-                                span e
-                                span r
-                                span a
-                                span m
-                                span e
-                                span n
-                                span t
-                                span e
+                                span.wow.fadeInRighttBig l
+                                span.wow.fadeInRight(data-wow-delay=".3s") a &nbsp;
+                                span.wow.fadeInRight(data-wow-delay=".8s") v
+                                span.wow.fadeInRight(data-wow-delay=".1s") e
+                                span.wow.fadeInRightBig(data-wow-delay=".4s") r
+                                span.wow.fadeInRight(data-wow-delay=".7s") a
+                                span.wow.fadeInRight(data-wow-delay="1s") m
+                                span.wow.fadeInRight(data-wow-delay=".2s") e
+                                span.wow.fadeInRight(data-wow-delay=".5s") n
+                                span.wow.fadeInRightBig(data-wow-delay=".9s") t
+                                span.wow.fadeInRight(data-wow-delay=".6s") e
                         h1.home__title Pensamos, luego hacemos
                         .home__line
                         .home__wrapper
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/chakana.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/achaval.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/VIK.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/weinert.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/descorchados.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/JA.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/vinoapp.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/MDV.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/marale-wines.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/lazy-ballerina.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/furlotti.png")
-                            a.home__logo
+                            a.home__logo(href="#")
                                 img(src="/images/logos/RAI.png")
