--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -1,1 +1,8 @@
 footer.footer
+    .container
+        .row
+            .col-24
+                .footer__container
+                    a.footer__mail(href="mailto:hola@laveramente.com" target="_blank") 
+                        p hola@laveramente.com 
+              
